--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
   "name": "foto-map",
   "version": "0.0.0",
-  "private": true,
-  "type": "module",
   "homepage": "https://lucasjellema.github.io/foto-map/",
   "scripts": {
-    "dev": "vite",
+    "dev": "cross-env NODE_OPTIONS='--no-warnings' vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test:unit": "vitest",
-    "test:e2e": "playwright test",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "lint": "eslint . --fix --ignore-path .gitignore",
+    "deploy": "gh-pages -d dist",
+    "predeploy": "npm run build"
   },
   "dependencies": {
-    "vue": "^3.4.15",
     "@mdi/font": "7.0.96",
     "@vue-leaflet/vue-leaflet": "^0.10.1",
     "@vueuse/core": "^10.7.2",
@@ -29,28 +24,30 @@
     "roboto-fontface": "*",
     "save": "^2.9.0",
     "uuid": "^9.0.1",
+    "vue": "^3.4.0",
     "vuetify": "^3.5.0"
-
   },
   "devDependencies": {
-    "@playwright/test": "^1.41.1",
-    "@vitejs/plugin-vue": "^5.0.3",
-    "@vue/test-utils": "^2.4.4",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "gh-pages": "^6.1.1",
-    "jsdom": "^24.0.0",
-    "vite": "^5.0.11",
-    "vitest": "^1.2.2",
     "@rollup/plugin-dsv": "^3.0.4",
+    "@vitejs/plugin-vue": "^5.0.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.56.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^16.4.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^9.19.0",
+    "gh-pages": "^6.1.1",
+    "pinia": "^2.1.0",
     "sass": "^1.69.0",
     "unplugin-auto-import": "^0.17.3",
     "unplugin-fonts": "^1.1.0",
     "unplugin-vue-components": "^0.26.0",
     "unplugin-vue-router": "^0.7.0",
-    "pinia": "^2.1.7",
-    "vue-router": "^4.2.5",
+    "vite": "^5.0.0",
     "vite-plugin-vue-layouts": "^0.10.0",
-    "vite-plugin-vuetify": "^2.0.0"
+    "vite-plugin-vuetify": "^2.0.0",
+    "vue-router": "^4.2.0"
   }
 }
