--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "d3": "^7.8.5",
     "dom-to-image-more": "^3.3.0",
     "exifr": "^7.1.3",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "leaflet": "^1.9.4",
     "leaflet-contextmenu": "^1.4.0",
     "leaflet.markercluster": "^1.5.3",
