--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "leaflet": "^1.9.4",
     "leaflet-contextmenu": "^1.4.0",
     "leaflet.markercluster": "^1.5.3",
+    "primevue": "^3.50.0",
+    "primeicons": "^6.0.1",
+    "primeflex": "^3.3.1",
     "roboto-fontface": "*",
     "save": "^2.9.0",
     "uuid": "^9.0.1",
     "vue": "^3.4.0",
-    "vuetify": "^3.5.0"
+    "vuetify": "^3.5.9"
+
   },
   "devDependencies": {
     "@rollup/plugin-dsv": "^3.0.4",
