--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@mdi/font": "7.0.96",
     "@vue-leaflet/vue-leaflet": "^0.10.1",
+    "@vueup/vue-quill": "^1.2.0",
     "@vueuse/core": "^10.7.2",
     "core-js": "^3.34.0",
     "d3": "^7.9.0",
