--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.50.0",
+    "qrcode": "^1.5.3",
     "roboto-fontface": "*",
     "save": "^2.9.0",
     "uuid": "^9.0.1",
